--- a/project2pg1.html
+++ b/project2pg1.html
@@ -1,11 +1,12 @@
 
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/aa5e48a5ae.js" crossorigin="anonymous"></script>
    <style type="text/css">
     .text{
     font-size: larger;
@@ -24,20 +25,21 @@
       margin-top: -99px;
   }
   .circle{
-      color: aliceblue;
-      background-color: rgb(219, 48, 48);
+      color:red;
+      font-size: 30px;
+      /* background-color: rgb(219, 48, 48); */
       width: 30px;
       height: 30px;
       border-radius: 50%;
       margin-left: 800px;
       margin-top: -65px;
   }
-  .plus{
+  /* .plus{
       color: aliceblue;
       font-size: larger;
       margin-left: 810px;
       margin-top: -25px;
-  }
+  } */
   .box{
       color: coral;
       height: 250px;
@@ -222,8 +224,11 @@
     <div class="text"><h1>Tasks</h1></div>
     <div class="list"><h1>Lists</h1></div> 
 
-    <a href="./project2pg3.html"><div class="circle"></div> </a>
-    <div class="plus"> + </div>
+    <a href="./project2pg3.html">
+        <div class="circle">
+            <i class="fa-solid fa-circle-plus"></i>
+        </div> </a>
+    
 
     <div class="word">Add List</div>
     <a href="./project2pg2.html"><div class="box"> <br> Trip to Paris <hr class="line"> <br>
